# Genx-Blockchain

./: CRYPTO_TRUST_BANK.md  README.md  package.json  start-blockchain.bat  start-validator.bat
backend/: package.json  server.js
backend/routes/: wallet.js
consensus/: Cargo.toml
consensus/src/: finality.rs  lib.rs  pos.rs  validator.rs
core/: Cargo.toml
core/src/: block.rs  chain.rs  genesis.rs  lib.rs  state.rs  transaction.rs
node/: package.json
node/src/: api.js  blockchain.js  genesis.js  lib.js  lib.rs  main.js  network.js  network.rs  smartcontract.js  wallet-bridge.js  wallet.js
node/src/explorer/: api.js  app.js  explorer.js  index.html  styles.css
node/src/smartcontract/: TokenContract.js
public/: index.html
smartcontracts/src/: lib.rs
wallet/: Cargo.toml  README.md  index.js  package.json
wallet/src/: api.rs  lib.rs
