[package]
name = "consensus"
version = "0.1.0"
edition = "2021"
authors = ["Genesis Architect"]
description = "Consensus engine for Crypto Trust Bank blockchain"

[dependencies]
core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
chrono = { version = "0.4.24", features = ["serde"] }
thiserror = "1.0.40"
log = "0.4.17"
tokio = { version = "1.28.0", features = ["full"] }

[lib]
name = "consensus"
path = "src/lib.rs"