[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Genesis Architect"]
description = "Core blockchain components for Crypto Trust Bank"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
ed25519-dalek = "1.0.1"
rand = "0.8.5"
chrono = { version = "0.4.24", features = ["serde"] }
thiserror = "1.0.40"
hex = "0.4.3"
log = "0.4.17"

[lib]
name = "core"
path = "src/lib.rs"