[package]
name = "wallet"
version = "0.1.0"
edition = "2021"
authors = ["Genesis Architect"]
description = "Wallet implementation for the GENX blockchain"

[dependencies]
core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.40"
rand = "0.8.5"
sha2 = "0.10.6"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
aes-gcm = "0.9.4"
pbkdf2 = "0.11.0"
hmac = "0.12.1"
log = "0.4.17"

[lib]
name = "wallet"
path = "src/lib.rs"